# UCMDailyRegister

./: .env.example  .gitignore  404.html  CLAUDE.md  LICENSE  PRODUCT.md  README.md  SECURITY.md  deploy.sh  docker-compose.yml  index.html  mkdocs.yml  pytest.ini
backend/: .dockerignore  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2b6a9d4c1e8f_add_editor_instructions_to_edit_versions.py  4cca2368e0ff_aligned_schema_pascalcase.py  67a4bd17e12f_add_indexes_on_foreign_key_columns.py  6f4e8a2c1b7d_backfill_missing_recurrence_columns.py  792c4cd01807_backfill_missing_tables_and_fix_.py  7d3e5f9a1b2c_add_product_feedback.py  910c2f3c5db4_add_visibility_role_to_allowed_values.py  a1b2c3d4e5f7_add_slc_calendar_fields_to_submissions.py  a3c5f7e9b2d1_add_survey_end_date_to_submissions.py  b8d4e6f1a2c3_restore_clobbered_submission_originals.py  b8f9c2d4e6a1_add_second_requested_date_to_submission_schedule_requests.py  bf1f70f4c8d9_add_newsletter_external_items.py  e9ef16c2a1f1_initial_schema.py  (+8 more)
backend/app/: config.py  main.py
backend/scripts/: seed_slc_events.py
backend/tests/: conftest.py  postgres_smoke.py  test_ai_edits.py  test_allowed_values.py  test_authorization.py  test_config.py  test_feedback.py  test_health.py  test_hyperlinks.py  test_images.py  test_joy_style_rule_migration.py  test_newsletters.py  test_recurring_messages.py  test_schedule.py  test_schema_management.py  test_sections.py  test_seed.py  test_style_rules.py  test_submission_service.py  test_submissions.py  test_text.py
(+187 files in other folders)
